[gd_scene load_steps=4 format=3 uid="uid://nc5fmx7tbopd"]

[ext_resource type="Texture2D" uid="uid://ctuodcm4sarbl" path="res://sprites/UI/CursorHandPointer.png" id="1_1mu35"]
[ext_resource type="Script" path="res://sprites/UI/cursor_hand.gd" id="2_u0d0h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_advjf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_1mu35")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="CursorHand" type="Control"]
top_level = true
visibility_layer = 1023
layout_mode = 3
anchors_preset = 0
focus_mode = 2
script = ExtResource("2_u0d0h")

[node name="CursorSprite" type="AnimatedSprite2D" parent="."]
visibility_layer = 1023
z_index = 8
sprite_frames = SubResource("SpriteFrames_advjf")
autoplay = "default"

[node name="MultiTargetFlickerTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="MultiTargetFlickerTimer" to="." method="_on_multi_target_flicker_timer_timeout"]
